# studios-parse

./: .pre-commit-config.yaml  catalog.html  emails.py  fix_protocols.py  fix_urls.py  links.txt  main.py  parser_links.py  press_buttons.py  pyproject.toml  r52.html  read_html.py  tabs.py
data/: emails.txt  links.txt  paths.txt  urls.txt
parser/: consts.py  emails.py  links.py  paths.py  read_html.py  tabs.py
service/: fix_links_and_paths.py  fix_urls.py
